--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 	</dependencies>
 
 	<build>
+	   <finalName>springboot</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
