--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -10,6 +10,9 @@ spring:
     datasource:
         platform: postgresql
         url: jdbc:postgresql://localhost/springboot
-        username: postgres
-        password: postgres
+#        username: postgres
+#        password: postgres
+        url: jdbc:postgresql://ec2-184-73-229-220.compute-1.amazonaws.com/d66cuo6obtv4g0
+        username: hcgavhxkluynrg
+        password: UQiKVOd2yEqOJsUGTpmT6wLZzw
         driverClassName: org.postgresql.Driver
