Added freemarker and security

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -2,3 +2,8 @@ spring:
     datasource:
         platform: postgresql
         driverClassName: org.postgresql.Driver
+
+security:
+    ignored: /resources/**
+    basic:
+        path: /private/**
